[package]
name = "ampseer"
version = "0.1.0"
edition = "2021"
authors = ["Bradley W. Langhorst <langhorst@neb.com>"]
license = "AGPL-3.0"
keywords = ["amplicon", "sequencing", "artic"]
repository = "https://github.com/nebiolabs/ampseer"   
rust-version = "1.75" 
description = """
This program compares fastq read files (on stdin or from first argument) with expected
mulitiplex PCR amplicon start and end sequences to identify which of
the specified PCR schemes was used to create the library.
"""


[dependencies]
log = "0.4.20"
simple_logger = { version = "4.3.3", features = ["stderr"] }
clap = { version = "4.5.0", features = ["cargo", "derive"] }
human-panic = "1.2.3"
better-panic = "0.3.0"
noodles = { version = "0.65.0", features = ["fasta", "bam", "fastq"] }
debruijn = "0.3.4"
anyhow = "1.0.79"
xxh3 = "0.1.1" #used to construct 128 bit hash from read name

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
flamegraph = "0.6.5"    
duct = "0.13.7" # for testing piping between upstream decompressors and ampseer

[profile.dev]
opt-level=0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level=3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
